force-app/main/default/objects/Service_Agent__c/Service_Agent__c.object-meta.xml
<CustomObject>
    <fullName>Service_Agent__c</fullName>
    <label>Service Agent</label>
    <pluralLabel>Service Agents</pluralLabel>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Service Agent Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>