force-app/main/default/objects/Service_Agent__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Technical Support</fullName><default>true</default><label>Technical Support</label></value>
            <value><fullName>Billing</fullName><default>false</default><label>Billing</label></value>
            <value><fullName>Sales</fullName><default>false</default><label>Sales</label></value>
            <value><fullName>General Inquiry</fullName><default>false</default><label>General Inquiry</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>